# orderbook-aggregator-rust

./: Cargo.toml  README.md  coinbase.json  gemini.json
src/: main.rs
src/helpers/: api_client.rs  data_fetcher.rs  mod.rs  orderbook_merger.rs  rate_limiter.rs  types.rs
