[package]
name = "ob-aggregator-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
governor = "0.10.1"
log = "0.4.28"
num-format = "0.4.4"
reqwest = { version = "0.12.24", features = ["json"] }
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
